...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/newsTitle"
                style="@style/headLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newsAuthor"
                tools:text="@string/generic_author" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/newsBody"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textHtml="@{viewmodel.content}"
                app:linkUrl="@{viewmodel.link}"
                app:layout_constraintEnd_toEndOf="parent"
...
