...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.webarticle.WebArticleFragment">

        <WebView
            android:id="@+id/webview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="@{viewmodel.webViewVisibility}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
